# InJoyMenuBot

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  auth.py  database.py  main.py  run.py  settings.py
backend/app/db/: admin_users.py  menu_items.py
backend/app/models/: admin_user.py  menu_item.py
backend/app/routers/: admins.py  menu.py  public.py
backend/data/: injoy.db
bot/: Dockerfile  bot.py  config.py  pyproject.toml
bot/services/: __init__.py  api_client.py  menu_image.py
docs/lab9/: submission-checklist.md  task2-project-plan.md  task3-feedback-log.md  task5-presentation-outline.md
docs/screenshots/: README.md
frontend/: app.js  index.html  nginx.conf  styles.css
