[project]
name = "injoy-menu-backend"
version = "0.1.0"
description = "Backend API for InJoy menu bot"
requires-python = "==3.12.*"
dependencies = [
  "aiosqlite>=0.21.0",
  "fastapi>=0.115.0",
  "greenlet>=3.2.0",
  "pydantic-settings>=2.7.0",
  "sqlmodel>=0.0.22",
  "uvicorn[standard]>=0.30.0",
]

[tool.uv]
package = false
